Fix: 콘텐츠 유형별 표시 태그 구성
- 영화는 장르 최대 4개를 반환
- TV는 드라마 또는 애니메이션 분류와 장르 최대 3개를 반환
- 스포츠는 종목, 리그, 홈팀, 원정팀 순서로 반환
- 전체 태그 저장 및 연결 정책은 유지